[workspace]
resolver = "2"

members = [
    "coordinator",
    "cli",
    "utils",
    "service",
    "worker",
    "wasm",
    "bindings",
    "shared",
]

[workspace.dependencies]
tokio = { version = "1.20", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"
tokio-serde = { version = "0.9", features = ["json"] }
tokio-util = { version = "0.7", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7"
futures = "0.3"
uuid = { version = "1.4", features = ["serde", "v4"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", features = ["async"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime.git" }
wasi-common = { git = "https://github.com/bytecodealliance/wasmtime.git" }
wiggle = { git = "https://github.com/bytecodealliance/wasmtime.git" }
num-rational = { version = "0.4", features = ["serde"]}
bytes = "1.5"
rational = "1.5"
crows-macros = { path = "macros" }
crows-shared = { path = "shared" }
crows-bindings = { path = "bindings" }
crows-utils = { path = "utils" }
crows-service = { path = "service" }
crows-wasm = { path = "wasm" }
