[workspace]
resolver = "2"

members = [
    "coordinator",
    "cli",
    "utils",
    "service",
    "worker",
    "wasm",
    "bindings",
    "shared",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
# update rust-toolchain.toml too!
rust-version = "1.76.0"

[workspace.dependencies]
tokio = { version = "1.20", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"
tokio-serde = { version = "0.9", features = ["json"] }
tokio-util = { version = "0.7", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7"
futures = "0.3"
uuid = { version = "1.4", features = ["serde", "v4"] }
wasmtime = { version = "19.0.0", features = ["async"] }
wasmtime-wasi = { version = "19.0.0" }
wasi-common = { version = "19.0.0" }
wiggle = { version = "19.0.0" }
num-rational = { version = "0.4", features = ["serde"]}
bytes = "1.5"
rational = "1.5"
crows-macros = { path = "macros", version = "0.2.0" }
crows-shared = { path = "shared", version = "0.2.0" }
crows-bindings = { path = "bindings", version = "0.2.0" }
crows-utils = { path = "utils", version = "0.2.0" }
crows-service = { path = "service", version = "0.2.0" }
crows-wasm = { path = "wasm", version = "0.2.0" }
crows-coordinator = { path = "coordinator", version = "0.2.0" }
crows-worker = { path = "worker", version = "0.2.0" }
crows-cli = { path = "cli", version = "0.2.0" }
