[workspace]
resolver = "2"

members = [
    "coordinator",
    "cli",
    "utils",
    "service",
    "worker",
    "wasm",
    "bindings",
    "shared",
    "tests",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.81.0"

[workspace.dependencies]
tokio = { version = "1.20", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"
tokio-serde = { version = "0.9", features = ["json"] }
tokio-util = { version = "0.7", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7"
futures = "0.3"
uuid = { version = "1.4", features = ["serde", "v4"] }
wasmtime = { version = "25.0", features = ["async"] }
wasmtime-wasi = { version = "25.0" }
wasi-common = { version = "25.0" }
wiggle = { version = "25.0" }
num-rational = { version = "0.4", features = ["serde"]}
bytes = "1.5"
rational = "1.5"
crows-macros = { path = "macros", version = "0.3.0" }
crows-shared = { path = "shared", version = "0.3.0" }
crows-bindings = { path = "bindings", version = "0.3.0" }
crows-utils = { path = "utils", version = "0.3.0" }
crows-service = { path = "service", version = "0.3.0" }
crows-wasm = { path = "wasm", version = "0.3.0" }
crows-coordinator = { path = "coordinator", version = "0.3.0" }
crows-worker = { path = "worker", version = "0.3.0" }
crows = { path = "cli", version = "0.3.0" }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }
tokio-rustls = "0.26"
rustls-pki-types = "1.8.0"
