[package]
name = "crows-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
crossterm = "0.27"

tokio.workspace = true
serde_json.workspace = true
tokio-serde.workspace = true
futures.workspace = true
tokio-util.workspace = true
serde.workspace = true
uuid.workspace = true
anyhow.workspace = true
crows-utils.workspace = true
crows-service.workspace = true
crows-wasm.workspace = true
