[package]
name = "crows-cli"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "CLI for using the Crows stress testing tool"
documentation = "https://docs.rs/crows-cli"
homepage = "https://github.com/drogus/crows"
repository = "https://github.com/drogus/crows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "crows"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
crossterm = "0.27"

tokio.workspace = true
serde_json.workspace = true
tokio-serde.workspace = true
futures.workspace = true
tokio-util.workspace = true
serde.workspace = true
uuid.workspace = true
anyhow.workspace = true
crows-utils.workspace = true
crows-service.workspace = true
crows-wasm.workspace = true
