[package]
name = "crows-coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crows-utils = { path = "../utils" }
crows-service = { path = "../service" }

tokio.workspace = true
tokio-serde.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
uuid.workspace = true
