[package]
name = "crows-coordinator"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tokio-serde.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
uuid.workspace = true
crows-shared.workspace = true
crows-wasm.workspace = true
crows-utils.workspace = true
crows-service.workspace = true
