[package]
name = "crows-coordinator"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Coordinator server for Crows"
documentation = "https://docs.rs/crows-coordinator"
homepage = "https://github.com/drogus/crows"
repository = "https://github.com/drogus/crows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tokio-serde.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
uuid.workspace = true
crows-shared.workspace = true
crows-wasm.workspace = true
crows-utils.workspace = true
crows-service.workspace = true
