[package]
name = "lunatic-message-request"
version = "0.1.1"
edition = "2021"
description = "Message responses using regular lunatic processes."
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
keywords = ["lunatic", "response", "reply", "message"]
categories = ["wasm"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/tqwewe/lunatic-message-request"

[dependencies]
lunatic = "0.14.1"
serde = { version = "1.0", features = ["derive"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["wasm32-wasi"]
