[package]
name = "crows-macros"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Macros for Crows"
documentation = "https://docs.rs/crows-macros"
homepage = "https://github.com/drogus/crows"
repository = "https://github.com/drogus/crows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
