[workspace]
[package]
name = "wasm_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.52"
rand = "0.8"

[profile.release]
lto = true

[package.metadata.component]
package = "component:rust-example"

[package.metadata.component.dependencies]

[package.metadata.component.target]

[package.metadata.component.target.dependencies]
