[package]
name = "crows-service"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Service macro used for the Crows RPC communication"
documentation = "https://docs.rs/crows-service"
homepage = "https://github.com/drogus/crows"
repository = "https://github.com/drogus/crows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
convert_case = "0.6"

[lib]
proc-macro = true

[features]
async = []
