[package]
name = "crows-shared"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Utilities shared between WASM and host in Crows"
documentation = "https://docs.rs/crows-shared"
homepage = "https://github.com/drogus/crows"
repository = "https://github.com/drogus/crows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
