[package]
name = "crows-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1.20", features = ["full"] }
anyhow = "1.0"
crows-coordinator = { workspace = true }
crows-worker = { workspace = true }
crows-utils = { workspace = true }
crows-shared = { workspace = true }
crows.workspace = true
