[package]
name = "crows-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
crows-coordinator.workspace = true
crows-worker.workspace = true
crows-utils.workspace = true
crows-shared.workspace = true
crows.workspace = true
rustls.workspace = true
axum = "0.7"
