[package]
name = "crows-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.20", features = ["full"] }
serde_json = "1.0.106"
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-util = { version = "0.7.3", features = ["full"] }
futures = { version = "0.3.21" }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
crows-service = { path = "../service" }
syn = { version = "2.0.37", features = ["full", "extra-traits", "fold"] }
thiserror = "1.0.48"

anyhow = "1.0"
byteorder = "1.4"
