[package]
name = "crows-utils"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Code shared between various Crows libraries"
documentation = "https://docs.rs/crows-utils"
homepage = "https://github.com/drogus/crows"
repository = "https://github.com/drogus/crows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.37", features = ["full", "extra-traits", "fold"] }
byteorder = "1.4"
sha256 = "1.4"

tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
tokio-util.workspace = true
tokio-serde.workspace = true
futures.workspace = true
num-rational.workspace = true
crows-shared.workspace = true
crows-service.workspace = true
