[package]
name = "crows-wasm"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "WASM related utils for Crows"
documentation = "https://docs.rs/crows-wasm"
homepage = "https://github.com/drogus/crows"
repository = "https://github.com/drogus/crows"

[dependencies]
slab = "0.4"
async-trait = "0.1"
reqwest = "0.11"

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasi-common.workspace = true
wiggle.workspace = true
futures.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
crows-shared.workspace = true
crows-utils.workspace = true
crows-bindings.workspace = true
