[package]
name = "crows-wasm"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "WASM related utils for Crows"
documentation = "https://docs.rs/crows-wasm"
homepage = "https://github.com/drogus/crows"
repository = "https://github.com/drogus/crows"

[dependencies]
slab = "0.4"
async-trait = "0.1"
hyper = { version = "1.4", features = ["full"] }
url = "2.5"
hyper-util = "0.1"
http-body-util = "0.1"
tower-service = "0.3"
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
http = "1.1.0"
lazy_static = "1.5"
pin-project-lite = "0.2"
wit-component = "0.244.0"

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasi-common.workspace = true
wiggle.workspace = true
futures.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
crows-shared.workspace = true
crows-utils.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pki-types.workspace = true

[dev-dependencies]
mockito = "1.5"
wiremock = "0.6"
