[package]
name = "crows-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crows-utils = { path = "../utils" }
byteorder = "1.4"
crows-service = { path = "../service" }
crows-wasm = { path = "../wasm" }

uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-serde.workspace = true
tokio-util.workspace = true
futures.workspace = true
wasmtime.workspace = true
