[package]
name = "crows-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
num_cpus = "1.16"
tokio-timer = "0.2"

uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-serde.workspace = true
tokio-util.workspace = true
futures.workspace = true
wasmtime.workspace = true
num-rational.workspace = true
crows-utils.workspace = true
crows-wasm.workspace = true
crows-service.workspace = true
crows-shared.workspace = true
