[package]
name = "crows-worker"
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
description = "Worker executing scenarios for Crows"
documentation = "https://docs.rs/crows-worker"
homepage = "https://github.com/drogus/crows"
repository = "https://github.com/drogus/crows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
num_cpus = "1.16"
tokio-timer = "0.2"

uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-serde.workspace = true
tokio-util.workspace = true
futures.workspace = true
wasmtime.workspace = true
num-rational.workspace = true
crows-utils.workspace = true
crows-wasm.workspace = true
crows-service.workspace = true
crows-shared.workspace = true
